--- a/Wipro_PreSkill/.project
+++ b/Wipro_PreSkill/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Wipro_Training</name>
+	<name>Wipro_PreSkill</name>
 	<comment></comment>
 	<projects>
 	</projects>
