--- a/Wipro_PreSkill/pom.xml
+++ b/Wipro_PreSkill/pom.xml
@@ -21,7 +21,18 @@
 			<artifactId>selenium-java</artifactId>
 			<version>4.34.0</version>
 		</dependency>
+		
+		<dependency>
+    <groupId>io.github.bonigarcia</groupId>
+    <artifactId>webdrivermanager</artifactId>
+    <version>5.9.2</version>
+</dependency>
 
+		<dependency>
+			<groupId>com.webdriver</groupId>
+			<artifactId>WebDriver_</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 </project>
